fix: add loadmore-btn

--- a/page2/FC Barcelona.html
+++ b/page2/FC Barcelona.html
@@ -87,7 +87,7 @@
 	      	  <p>国家队比赛后的第一场训练</p>
 	      	</li>
 	      </ul>
-	      <div style="clear:both;"></div>
+	      <div class="btn-readmore" style="clear:both;">加载更多</div>
 	    </div>
 	  </div>
 
