--- a/page2/FC Barcelona.html
+++ b/page2/FC Barcelona.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+  <div id="wrap">
+	<img src="./img/loading/loading.gif">
+  </div>
+  
   <div id="header">
 	<div class="carousel">
 		<ul class="pic-ct clear">
