--- a/page1/FC Barcelona.html
+++ b/page1/FC Barcelona.html
@@ -12,10 +12,10 @@
   <div id="header">
 	<div class="carousel">
 		<ul class="pic-ct clear">
-			<li class="pic"><img src="./img/background/background1-1.jpg"></li>
-			<li class="pic"><img src="./img/background/background1-2.jpg"></li>
-			<li class="pic"><img src="./img/background/background1-3.jpg"></li>
-			<li class="pic"><img src="./img/background/background1-4.jpg"></li>
+			<li class="pic"><img src="http://p1.bqimg.com/567571/026905c22ca9067c.jpg"></li>
+			<li class="pic"><img src="http://p1.bqimg.com/567571/6575c93363928ed1.jpg"></li>
+			<li class="pic"><img src="http://p1.bqimg.com/567571/a89f7bb9c63dff09.jpg"></li>
+			<li class="pic"><img src="http://p1.bpimg.com/567571/d53cb7387062091d.jpg"></li>
 		</ul>
 		<ul class="arrow-ct">
 			<li class="left-arrow arrow"><</li>
@@ -59,32 +59,32 @@
 	      <p>记录每次训练的美好时刻</p>
 	      <ul class="training-list water-basic">
 	      	<li>
-	      	  <a href="#"><img style="height: 260px" data-src="img/training/20161210.jpg"></a>
+	      	  <a href="#"><img style="height: 260px" data-src="http://p1.bpimg.com/567571/d57464ea9795d2d8.jpg"></a>
 	      	  <h3>12月10日训练</h3>
 	      	  <p>巴萨出战奥萨苏纳前的最后一场训练。</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img data-src="img/training/20161206.jpg"></a>
+	      	  <a href="#"><img data-src="http://p1.bpimg.com/567571/2aed7219c6508826.jpg"></a>
 	      	  <h3>12月6日训练</h3>
 	      	  <p>国家德比后的首场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 140px" data-src="img/training/20161203.jpg"></a>
+	      	  <a href="#"><img style="height: 140px" data-src="http://p1.bpimg.com/567571/3ad7ebd448977a88.jpg"></a>
 	      	  <h3>12月3日训练</h3>
 	      	  <p>国家德比前的最后一场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 170px" data-src="img/training/20161129.jpg"></a>
+	      	  <a href="#"><img style="height: 170px" data-src="http://i1.piimg.com/567571/b81c2b3f8e6cb50c.jpg"></a>
 	      	  <h3>11月29日训练</h3>
 	      	  <p>战平皇家社会后的首场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img data-src="img/training/20161118.jpg"></a>
+	      	  <a href="#"><img data-src="http://p1.bpimg.com/567571/22148ce06791051b.jpg"></a>
 	      	  <h3>11月18日训练</h3>
 	      	  <p>与马拉加赛前的最后一场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 300px" data-src="img/training/20161117.jpg"></a>
+	      	  <a href="#"><img style="height: 300px" data-src="http://p1.bqimg.com/567571/71130712d835dd6b.jpg"></a>
 	      	  <h3>11月17日训练</h3>
 	      	  <p>国家队比赛后的第一场训练</p>
 	      	</li>
