--- a/page2/FC Barcelona.html
+++ b/page2/FC Barcelona.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/iconfont.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<!-- <script src="./dist/js/marge-start.js"></script> -->
 </head>
 <body>
   <div id="wrap">
@@ -240,6 +241,6 @@
   	  </ul>
   	</div>
   </div>
-  <script src="dist/js/marge.js"></script>
+  <script src="dist/js/merge.js"></script>
 </body>
 </html>
