添加欢迎画面文字

--- a/page2/FC Barcelona.html
+++ b/page2/FC Barcelona.html
@@ -10,6 +10,8 @@
 <body>
   <div id="wrap">
 	<img src="./img/loading/loading.gif">
+	<h2>正在加载</h2>
+	<p><small>因页面部署在GitHub上，可能会出现页面加载时间较长的情况，请耐心等待。</small></p>
   </div>
   
   <div id="header">
