change img origin

--- a/page1/FC Barcelona.html
+++ b/page1/FC Barcelona.html
@@ -30,7 +30,7 @@
 	</div> 
   </div>
 
-  <div id="main">
+ <div id="main">
 	  <div id="honour" class="honour">
 	    <div class="layout">
 		  	<h1>荣耀</h1>
@@ -59,32 +59,32 @@
 	      <p>记录每次训练的美好时刻</p>
 	      <ul class="training-list water-basic">
 	      	<li>
-	      	  <a href="#"><img style="height: 260px" data-src="http://p1.bpimg.com/567571/d57464ea9795d2d8.jpg"></a>
+	      	  <a href="#"><img style="height: 260px" data-src="http://p1.bqimg.com/567571/2ede94a16cb5b87f.jpg"></a>
 	      	  <h3>12月10日训练</h3>
 	      	  <p>巴萨出战奥萨苏纳前的最后一场训练。</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img data-src="http://p1.bpimg.com/567571/2aed7219c6508826.jpg"></a>
+	      	  <a href="#"><img data-src="http://p1.bqimg.com/567571/fb0f1ed8bc56f114.jpg"></a>
 	      	  <h3>12月6日训练</h3>
 	      	  <p>国家德比后的首场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 140px" data-src="http://p1.bpimg.com/567571/3ad7ebd448977a88.jpg"></a>
+	      	  <a href="#"><img style="height: 140px" data-src="http://p1.bpimg.com/567571/74232ba1f369ae65.jpg"></a>
 	      	  <h3>12月3日训练</h3>
 	      	  <p>国家德比前的最后一场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 170px" data-src="http://i1.piimg.com/567571/b81c2b3f8e6cb50c.jpg"></a>
+	      	  <a href="#"><img style="height: 170px" data-src="http://p1.bqimg.com/567571/8e53daf6b572714f.jpg"></a>
 	      	  <h3>11月29日训练</h3>
 	      	  <p>战平皇家社会后的首场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img data-src="http://p1.bpimg.com/567571/22148ce06791051b.jpg"></a>
+	      	  <a href="#"><img data-src="http://p1.bpimg.com/567571/0eafddf64a213f08.jpg"></a>
 	      	  <h3>11月18日训练</h3>
 	      	  <p>与马拉加赛前的最后一场训练</p>
 	      	</li>
 	      	<li>
-	      	  <a href="#"><img style="height: 300px" data-src="http://p1.bqimg.com/567571/71130712d835dd6b.jpg"></a>
+	      	  <a href="#"><img style="height: 300px" data-src="http://p1.bpimg.com/567571/7da99fd6253f68b5.jpg"></a>
 	      	  <h3>11月17日训练</h3>
 	      	  <p>国家队比赛后的第一场训练</p>
 	      	</li>
@@ -99,70 +99,70 @@
 	  	  <p>铭记历史，创造未来</p>
 	  	  <ol class="history-list">
 	  	  	<li>
-	  	  	  <img data-src="img/history/1.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/81a48723fc56b7ca.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>建队初期（1899-1909）</h3>
 	  	  	    <p>1899年10月22日，汉斯·甘伯从杂志中刊登一个广告宣称自己自己想建立一个足球俱乐部。最终在11月29日Gimnasio Solé举行的会议上，巴塞罗那足球俱乐部宣布正式成立。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/2.jpg">
+	  	  	  <img data-src="http://p1.bpimg.com/567571/2b0685b7502dbb38.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>成长阶段（1909-1919）</h3>
 	  	  	    <p>在甘伯担任主席的不到10年间，会员数量从1909年的201人增长到2973人。在这期间，巴萨打下了坚实的基础，逐渐成为一开始设想中的足球俱乐部。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/3.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/f6eed4eb5bbee193.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>首次巅峰（1919-1930）</h3>
 	  	  	    <p>西甲联赛创立于1929年，当时共有10支球队参加，巴萨在首届联赛中以11胜3平4负积25分（当时获胜积2分）力压获得23分的皇马，夺得首届西甲冠军。在1919-1930年里，巴萨共获得10次加泰罗尼亚冠军，5次西班牙冠军赛冠军和1次西甲联赛冠军。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/4.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/759b2f7aea4eccb6.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>涅槃重生（1930-1949）</h3>
 	  	  	    <p>1930年7月30日，巴萨创始人之一甘伯被证实由于个人因素自杀身亡，年仅52岁便离开人世1935年7月，留在西班牙的巴塞罗那主席约瑟普·索诺尔被叛军首领弗朗西斯科·佛朗哥下令枪毙。巴塞罗那队员们当时在墨西哥和美国做巡回表演赛才没有被枪杀。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/5.jpg">
+	  	  	  <img data-src="http://p1.bpimg.com/567571/e7b2eb8c034ece70.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>五冠王朝（1950-1968）</h3>
 	  	  	    <p>1950年6月库巴拉加盟巴塞罗那。俱乐部在 Ferdinand Daučík教练和库巴拉的带领球队获得了1951/52，1952/53赛季联赛冠军，还包办了1951/953三年的西班牙杯冠军。在1951/52赛季，巴塞罗那在由巴罗萨、塞萨尔、库巴拉、莫雷诺、曼科恩组成的锋线率领下成为了联赛、西班牙杯、拉丁杯、马丁杯、罗西杯冠军的五冠王。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/6.jpg">
+	  	  	  <img data-src="http://p1.bpimg.com/567571/44d3a3fc5187fc7f.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>克鲁伊夫时期（1969-1978）</h3>
 	  	  	    <p>1973年，蒙塔尔再度被选为主席，他的竞选标语是“巴萨不仅仅是一家俱乐部”。1973年巴塞罗那签下了荷兰足球传奇人物克鲁伊夫。1973/74赛季巴塞罗那获得了联赛冠军，为俱乐部75周年庆典献上了大礼。这时的巴塞罗那已经拥有了69566名会员，成为当时世界上最有影响力的足球俱乐部。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/7.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/c197f0f37e010ded.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>梦一王朝（1978-1995）</h3>
 	  	  	    <p>1978年5月6日，约瑟普·刘易斯·努涅斯当选巴塞罗那主席，自此他亦成巴塞罗那在任最久的会长。九十年代的巴塞罗那仍然取得极佳成绩。由克鲁伊夫执教的巴塞罗那由1991年起连夺4届联赛冠军，加上于1992年科曼的入球击败森多利亚，赢得球会的第一个欧冠冠军，故被誉为巴塞历年来的“梦幻队”（梦一队）</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/8.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/8b5f4d59a847a4a8.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>平淡期（1995-2002）</h3>
 	  	  	    <p>随后几年巴萨成绩一直平平无奇当时范加尔大量引进荷兰球员，被称为“荷兰班底”。可惜范加尔并未能为球会更进一步，当在2000年西甲巴萨只得第二名，范加尔便宣布辞职。自此巴萨踏入衰落期，联赛更曾一度跌落至第十五位，连欧冠杯席位都多次失去。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/9.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/cd61bba8cc5e5a42.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>梦二王朝（2003-2007）</h3>
 	  	  	    <p>2003年夏天巴萨大改革，拉波尔塔成为俱乐部主席，聘请了荷兰人里杰卡尔德来到俱乐部出任主教练，并收购了巴西超级球星罗纳尔迪尼奥。这标志巴塞罗那的复兴，2006年，巴塞罗那更是在欧洲冠军杯决赛中击败对手阿森纳，继1992年后第二次夺得该项锦标。</p>
 	  	  	  </div>  
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/history/10.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/6912f2cfc92d4436.jpg">
 	  	  	  <div class="history-words">
 	  	  	    <h3>新的征程（2008-）</h3>
 	  	  	    <p>2008年夏，里杰卡尔德离任，瓜迪奥拉走马上任。他提拔了年仅21的梅西作为新的核心。在2008/09赛季，巴萨在瓜迪奥拉的带领下获得了联赛冠军、欧洲冠军和国王杯冠军，并在2009/10赛季前半段又获得了欧洲超级杯赛、西班牙超级杯和世俱杯，在2009年获得了史无前例的六冠王称号，这也标志着巴萨梦三王朝的诞生。</p>
@@ -179,7 +179,7 @@
 	  	  <p>我们的骄傲！</p>
 	  	  <ul class="player-list">
 	  	  	<li>
-	  	  	  <img data-src="img/player/Messi.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/d1b051c91bad2a10.jpg">
 	  	  	  <h3>里奥·梅西</h3>
 	  	  	  <p>
 	  	  	  	<a href="#"><i class="iconfont icon-tuite"></i></a>
@@ -188,7 +188,7 @@
 	  	  	  </p>
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/player/Iniesta.jpg">
+	  	  	  <img data-src="http://p1.bpimg.com/567571/cf63aacf882fc0b9.jpg">
 	  	  	  <h3>安德雷斯·伊涅斯塔</h3>
 	  	  	  <p>
 	  	  	  	<a href="#"><i class="iconfont icon-tuite"></i></a>
@@ -197,7 +197,7 @@
 	  	  	  </p>
 	  	  	</li>
 	  	  	<li>
-	  	  	  <img data-src="img/player/Suarez.jpg">
+	  	  	  <img data-src="http://p1.bqimg.com/567571/69636d77977b47ba.jpg">
 	  	  	  <h3>路易斯·阿尔贝托·苏亚雷斯</h3>
 	  	  	  <p>
 	  	  	  	<a href="#"><i class="iconfont icon-tuite"></i></a>
